--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>sz-service</module>
         <module>sz-scheduled</module>
         <module>sz-mybatis</module>
+        <module>sz-oauth</module>
+        <module>sz-taskexecutor</module>
     </modules>
 
 
@@ -28,20 +30,6 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka-server</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-    </dependencies>
 
     <dependencyManagement>
         <dependencies>
